# handler/handler.go
@@ -53,5 +53,6 @@ func (h *Handler) registerRoutes() {
 	h.Router.HandleFunc("/datasets/{username}", h.getDatasets).Methods("GET")
 	h.Router.HandleFunc("/datasets/{username}/{slug}", h.getDataset).Methods("GET")
 	h.Router.HandleFunc("/datasets/{username}/{slug}", h.syncDataset).Methods("PUT")
+	h.Router.HandleFunc("/datasets/{username}/{slug}", h.deleteDataset).Methods("DELETE")
 	h.Router.HandleFunc("/datasets/{username}/{slug}/zip", h.downloadDatasetZip).Methods("GET")
 }
